--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         "php": "^7.1",
         "http-interop/http-middleware": "^0.4",
         "jms/serializer": "^1.9",
-        "lcobucci/chimera-foundation": "1.0.0-alpha1@alpha",
-        "lcobucci/chimera-routing": "1.0.0-alpha1@alpha",
-        "lcobucci/chimera-routing-expressive": "1.0.0-alpha1@alpha",
+        "lcobucci/chimera-foundation": "^1.0@alpha",
+        "lcobucci/chimera-routing": "^1.0@alpha",
+        "lcobucci/chimera-routing-expressive": "^1.0@alpha",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
