--- a/.travis.yml
+++ b/.travis.yml
@@ -44,3 +44,12 @@ jobs:
       env: STATIC_ANALYSIS=1
       script:
         - ./vendor/bin/phpstan analyse -c phpstan.neon -l max src tests
+
+    - stage: Code Quality
+      env: MUTATION_TESTS=1
+      before_script:
+        - mv ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini{.disabled,}
+        - if [[ ! $(php -m | grep -si xdebug) ]]; then echo "xdebug required for mutation tests"; exit 1; fi
+      script:
+        - ./vendor/bin/infection --test-framework-options="--testsuite unit" -s --threads=4 --min-msi=100 --min-covered-msi=100
+
