--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "lcobucci/chimera-foundation": "^1.0@rc"
     },
     "require-dev": {
+        "infection/infection": "^0.8",
         "phpstan/phpstan": "^0.8",
         "phpunit/phpunit": "^7.1",
         "squizlabs/php_codesniffer": "^3.1"
