--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
 jobs:
   allow_failures:
     - php: nightly
+    - env: STATIC_ANALYSIS=1
 
   include:
     - stage: Code Quality
@@ -43,7 +44,7 @@ jobs:
     - stage: Code Quality
       env: STATIC_ANALYSIS=1
       script:
-        - ./vendor/bin/phpstan analyse -c phpstan.neon -l max src tests
+        - ./vendor/bin/phpstan analyse
 
     - stage: Code Quality
       env: MUTATION_TESTS=1
