--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     },
     "require-dev": {
         "infection/infection": "^0.8",
-        "phpstan/phpstan": "^0.8",
+        "phpstan/phpstan": "^0.10@dev",
+        "phpstan/phpstan-phpunit": "^0.10@dev",
+        "phpstan/phpstan-strict-rules": "^0.10@dev",
         "phpunit/phpunit": "^7.1",
         "squizlabs/php_codesniffer": "^3.1"
     },
