--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,10 @@
+includes:
+    - vendor/phpstan/phpstan-phpunit/extension.neon
+    - vendor/phpstan/phpstan-phpunit/rules.neon
+    - vendor/phpstan/phpstan-strict-rules/rules.neon
+
 parameters:
-    ignoreErrors:
-        # Ignore PHPUnit mock stuff
-        - '#PHPUnit_Framework_MockObject_MockObject.* given#'
+    level: 7
+    paths:
+        - src
+        - tests
