--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "lcobucci/chimera-foundation": "^1.0@rc"
     },
     "require-dev": {
+        "doctrine/coding-standard": "^4.0",
         "infection/infection": "^0.8",
         "phpstan/phpstan": "^0.10@dev",
         "phpstan/phpstan-phpunit": "^0.10@dev",
